Fixed responsive spacing between cards.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -390,7 +390,7 @@ input[type="checkbox"] {
     .restaurant-cards {
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: space-between;
 
         & a {
             width: 45%;
